// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Code Export Java JUnit Selenium should export a suite 1`] = `
"// Generated by Selenium IDE
using System;
using System.Collections;
using System.Collections.Generic;
using System.Linq;
using System.Threading;
using OpenQA.Selenium;
using OpenQA.Selenium.Chrome;
using OpenQA.Selenium.Firefox;
using OpenQA.Selenium.Support.UI;
using OpenQA.Selenium.Interactions;
using NUnit.Framework;
[TestFixture]
public class LoginTest {
  private IWebDriver Driver;
  public IDictionary<string, object> vars {get; private set;}
  private IJavaScriptExecutor js;
  [SetUp]
  public void SetUp() {
    this.Driver = new ChromeDriver();
    this.js = (IJavaScriptExecutor)this.Driver;
    this.vars = new Dictionary<string, object>();
  }
  [TearDown]
  protected void TearDown() {
    Driver.Quit();
  }
  [Test]
  public void validcredentials() {
    Driver.Navigate().GoToUrl(\\"http://the-internet.herokuapp.com/login\\");
    Driver.Manage().Window.Size = new System.Drawing.Size(1440, 1177);
    Driver.FindElement(By.Id(\\"username\\")).SendKeys(\\"tomsmith\\");
    Driver.FindElement(By.Id(\\"password\\")).SendKeys(\\"SuperSecretPassword!\\");
    Driver.FindElement(By.CssSelector(\\"#login button\\")).Click();
    Assert.That(Driver.FindElement(By.CssSelector(\\".flash.success\\")).Text, Is.EqualTo(\\"You logged into a secure area!\\\\\\\\\\\\\\\\n×\\"));
  }
  [Test]
  public void invalidcredentials() {
    Driver.Navigate().GoToUrl(\\"http://the-internet.herokuapp.com/login\\");
    Driver.Manage().Window.Size = new System.Drawing.Size(1440, 1177);
    Driver.FindElement(By.Id(\\"username\\")).SendKeys(\\"blah\\");
    Driver.FindElement(By.Id(\\"password\\")).SendKeys(\\"blah\\");
    Driver.FindElement(By.CssSelector(\\"#login button\\")).Click();
    Assert.That(Driver.FindElement(By.Id(\\"flash\\")).Text, Is.EqualTo(\\"Your username is invalid!\\\\\\\\\\\\\\\\n×\\"));
  }
}
"
`;

exports[`Code Export Java JUnit Selenium should export a suite that uses control flow commands 1`] = `
"// Generated by Selenium IDE
using System;
using System.Collections;
using System.Collections.Generic;
using System.Linq;
using System.Threading;
using OpenQA.Selenium;
using OpenQA.Selenium.Chrome;
using OpenQA.Selenium.Firefox;
using OpenQA.Selenium.Support.UI;
using OpenQA.Selenium.Interactions;
using NUnit.Framework;
[TestFixture]
public class ControlflowTest {
  private IWebDriver Driver;
  public IDictionary<string, object> vars {get; private set;}
  private IJavaScriptExecutor js;
  [SetUp]
  public void SetUp() {
    this.Driver = new ChromeDriver();
    this.js = (IJavaScriptExecutor)this.Driver;
    this.vars = new Dictionary<string, object>();
  }
  [TearDown]
  protected void TearDown() {
    Driver.Quit();
  }
  [Test]
  public void controlflowif() {
    this.vars[\\"myVar\\"] = this.js.ExecuteScript(\\"return 'a'\\");
    if ((Boolean) this.js.ExecuteScript(\\"return (arguments[0] === 'a')\\", this.vars[\\"myVar\\"])) {
      this.vars[\\"output\\"] = this.js.ExecuteScript(\\"return 'a'\\");
    } else if ((Boolean) this.js.ExecuteScript(\\"return (arguments[0] === 'b')\\", this.vars[\\"myVar\\"])) {
      this.vars[\\"output\\"] = this.js.ExecuteScript(\\"return 'b'\\");
    } else {
      this.vars[\\"output\\"] = this.js.ExecuteScript(\\"return 'c'\\");
    }
    Assert.That(this.vars[\\"output\\"].ToString(), Is.EqualTo(\\"a\\"));
  }
  [Test]
  public void controlflowelseif() {
    this.vars[\\"myVar\\"] = this.js.ExecuteScript(\\"return 'b'\\");
    if ((Boolean) this.js.ExecuteScript(\\"return (arguments[0] === 'a')\\", this.vars[\\"myVar\\"])) {
      this.vars[\\"output\\"] = this.js.ExecuteScript(\\"return 'a'\\");
    } else if ((Boolean) this.js.ExecuteScript(\\"return (arguments[0] === 'b')\\", this.vars[\\"myVar\\"])) {
      this.vars[\\"output\\"] = this.js.ExecuteScript(\\"return 'b'\\");
    } else {
      this.vars[\\"output\\"] = this.js.ExecuteScript(\\"return 'c'\\");
    }
    Assert.That(this.vars[\\"output\\"].ToString(), Is.EqualTo(\\"b\\"));
  }
  [Test]
  public void controlflowelse() {
    this.vars[\\"myVar\\"] = this.js.ExecuteScript(\\"return 'c'\\");
    if ((Boolean) this.js.ExecuteScript(\\"return (arguments[0] === 'a')\\", this.vars[\\"myVar\\"])) {
      this.vars[\\"output\\"] = this.js.ExecuteScript(\\"return 'a'\\");
    } else if ((Boolean) this.js.ExecuteScript(\\"return (arguments[0] === 'b')\\", this.vars[\\"myVar\\"])) {
      this.vars[\\"output\\"] = this.js.ExecuteScript(\\"return 'b'\\");
    } else {
      this.vars[\\"output\\"] = this.js.ExecuteScript(\\"return 'c'\\");
    }
    Assert.That(this.vars[\\"output\\"].ToString(), Is.EqualTo(\\"c\\"));
  }
  [Test]
  public void controlflowdo() {
    this.vars[\\"check\\"] = this.js.ExecuteScript(\\"return 1\\");
    do {
      this.vars[\\"check\\"] = this.js.ExecuteScript(\\"return arguments[0] + 1\\", this.vars[\\"check\\"]);
    } while ((Boolean) this.js.ExecuteScript(\\"return (arguments[0] < 3)\\", this.vars[\\"check\\"]));
    Assert.That(this.vars[\\"check\\"].ToString(), Is.EqualTo(\\"3\\"));
  }
  [Test]
  public void controlflowtimes() {
    this.vars[\\"check\\"] = this.js.ExecuteScript(\\"return 1\\");
    var times = 2;
    for(int i = 0; i < times; i++) {
      this.vars[\\"check\\"] = this.js.ExecuteScript(\\"return arguments[0] + 1\\", this.vars[\\"check\\"]);
    }
    Assert.That(this.vars[\\"check\\"].ToString(), Is.EqualTo(\\"3\\"));
  }
  [Test]
  public void controlflowwhile() {
    this.vars[\\"check\\"] = this.js.ExecuteScript(\\"return 1\\");
    while ((Boolean) this.js.ExecuteScript(\\"return (arguments[0] < 3)\\", this.vars[\\"check\\"])) {
      this.vars[\\"check\\"] = this.js.ExecuteScript(\\"return arguments[0] + 1\\", this.vars[\\"check\\"]);
    }
    Assert.That(this.vars[\\"check\\"].ToString(), Is.EqualTo(\\"3\\"));
  }
}
"
`;

exports[`Code Export Java JUnit Selenium should export a suite with a reused test method 1`] = `
"// Generated by Selenium IDE
using System;
using System.Collections;
using System.Collections.Generic;
using System.Linq;
using System.Threading;
using OpenQA.Selenium;
using OpenQA.Selenium.Chrome;
using OpenQA.Selenium.Firefox;
using OpenQA.Selenium.Support.UI;
using OpenQA.Selenium.Interactions;
using NUnit.Framework;
[TestFixture]
public class LoginTest {
  private IWebDriver Driver;
  public IDictionary<string, object> vars {get; private set;}
  private IJavaScriptExecutor js;
  [SetUp]
  public void SetUp() {
    this.Driver = new ChromeDriver();
    this.js = (IJavaScriptExecutor)this.Driver;
    this.vars = new Dictionary<string, object>();
  }
  [TearDown]
  protected void TearDown() {
    Driver.Quit();
  }
  public void login() {
    Driver.Navigate().GoToUrl(\\"https://the-internet.herokuapp.com/\\");
    Driver.FindElement(By.LinkText(\\"Form Authentication\\")).Click();
    Driver.FindElement(By.Id(\\"username\\")).SendKeys(this.vars[\\"username\\"].ToString());
    Driver.FindElement(By.Id(\\"password\\")).SendKeys(this.vars[\\"password\\"].ToString());
    Driver.FindElement(By.CssSelector(\\".fa\\")).Click();
  }
  [Test]
  public void invalidcredentials() {
    this.vars[\\"username\\"] = \\"blah\\";
    this.vars[\\"password\\"] = \\"blah\\";
    login();
  }
  [Test]
  public void validcredentials() {
    this.vars[\\"username\\"] = \\"tomsmith\\";
    this.vars[\\"password\\"] = \\"SuperSecretPassword!\\";
    login();
  }
}
"
`;

exports[`Code Export Java JUnit Selenium should export a suite with commands that open a new window inside of a reused test method 1`] = `
"// Generated by Selenium IDE
using System;
using System.Collections;
using System.Collections.Generic;
using System.Linq;
using System.Threading;
using OpenQA.Selenium;
using OpenQA.Selenium.Chrome;
using OpenQA.Selenium.Firefox;
using OpenQA.Selenium.Support.UI;
using OpenQA.Selenium.Interactions;
using NUnit.Framework;
[TestFixture]
public class DefaultSuiteTest {
  private IWebDriver Driver;
  public IDictionary<string, object> vars {get; private set;}
  private IJavaScriptExecutor js;
  [SetUp]
  public void SetUp() {
    this.Driver = new ChromeDriver();
    this.js = (IJavaScriptExecutor)this.Driver;
    this.vars = new Dictionary<string, object>();
  }
  [TearDown]
  protected void TearDown() {
    Driver.Quit();
  }
  public string waitForWindow(int timeout) {
    try {
      Thread.Sleep(timeout);
    } catch(Exception e) {
      Console.WriteLine(\\"{0} Exception caught.\\", e);
    }
    var whNow = ((IReadOnlyCollection<object>)Driver.WindowHandles).ToList();
    var whThen = ((IReadOnlyCollection<object>)this.vars[\\"WindowHandles\\"]).ToList();
    if (whNow.Count > whThen.Count) {
      return whNow.Except(whThen).First().ToString();
    } else {
      return whNow.First().ToString();
    }
  }
  public void selectwindow() {
    Driver.Navigate().GoToUrl(\\"http://the-internet.herokuapp.com/windows\\");
    this.vars[\\"WindowHandles\\"] = Driver.WindowHandles;
    Driver.FindElement(By.LinkText(\\"Click Here\\")).Click();
    this.vars[\\"win9425\\"] = waitForWindow(2000);
    Driver.SwitchTo().Window(this.vars[\\"win9425\\"].ToString());
    Assert.That(Driver.Title, Is.EqualTo(\\"New Window\\"));
  }
  [Test]
  public void reuse() {
    selectwindow();
  }
}
"
`;

exports[`Code Export Java JUnit Selenium should export a suite with just one new window util method when there are multiple commands that open a new window 1`] = `
"// Generated by Selenium IDE
using System;
using System.Collections;
using System.Collections.Generic;
using System.Linq;
using System.Threading;
using OpenQA.Selenium;
using OpenQA.Selenium.Chrome;
using OpenQA.Selenium.Firefox;
using OpenQA.Selenium.Support.UI;
using OpenQA.Selenium.Interactions;
using NUnit.Framework;
[TestFixture]
public class DefaultSuiteTest {
  private IWebDriver Driver;
  public IDictionary<string, object> vars {get; private set;}
  private IJavaScriptExecutor js;
  [SetUp]
  public void SetUp() {
    this.Driver = new ChromeDriver();
    this.js = (IJavaScriptExecutor)this.Driver;
    this.vars = new Dictionary<string, object>();
  }
  [TearDown]
  protected void TearDown() {
    Driver.Quit();
  }
  public string waitForWindow(int timeout) {
    try {
      Thread.Sleep(timeout);
    } catch(Exception e) {
      Console.WriteLine(\\"{0} Exception caught.\\", e);
    }
    var whNow = ((IReadOnlyCollection<object>)Driver.WindowHandles).ToList();
    var whThen = ((IReadOnlyCollection<object>)this.vars[\\"WindowHandles\\"]).ToList();
    if (whNow.Count > whThen.Count) {
      return whNow.Except(whThen).First().ToString();
    } else {
      return whNow.First().ToString();
    }
  }
  public void selectwindow() {
    Driver.Navigate().GoToUrl(\\"http://the-internet.herokuapp.com/windows\\");
    this.vars[\\"WindowHandles\\"] = Driver.WindowHandles;
    Driver.FindElement(By.LinkText(\\"Click Here\\")).Click();
    this.vars[\\"win9425\\"] = waitForWindow(2000);
    Driver.SwitchTo().Window(this.vars[\\"win9425\\"].ToString());
    Assert.That(Driver.Title, Is.EqualTo(\\"New Window\\"));
  }
  [Test]
  public void reuse() {
    selectwindow();
  }
  [Test]
  public void selectwindow() {
    Driver.Navigate().GoToUrl(\\"http://the-internet.herokuapp.com/windows\\");
    this.vars[\\"WindowHandles\\"] = Driver.WindowHandles;
    Driver.FindElement(By.LinkText(\\"Click Here\\")).Click();
    this.vars[\\"win9425\\"] = waitForWindow(2000);
    Driver.SwitchTo().Window(this.vars[\\"win9425\\"].ToString());
    Assert.That(Driver.Title, Is.EqualTo(\\"New Window\\"));
  }
}
"
`;

exports[`Code Export Java JUnit Selenium should export a test 1`] = `
"// Generated by Selenium IDE
using System;
using System.Collections;
using System.Collections.Generic;
using System.Linq;
using System.Threading;
using OpenQA.Selenium;
using OpenQA.Selenium.Chrome;
using OpenQA.Selenium.Firefox;
using OpenQA.Selenium.Support.UI;
using OpenQA.Selenium.Interactions;
using NUnit.Framework;
[TestFixture]
public class LoginTest {
  private IWebDriver Driver;
  public IDictionary<string, object> vars {get; private set;}
  private IJavaScriptExecutor js;
  [SetUp]
  public void SetUp() {
    this.Driver = new ChromeDriver();
    this.js = (IJavaScriptExecutor)this.Driver;
    this.vars = new Dictionary<string, object>();
  }
  [TearDown]
  protected void TearDown() {
    Driver.Quit();
  }
  [Test]
  public void login() {
    Driver.Navigate().GoToUrl(\\"http://the-internet.herokuapp.com/login\\");
    Driver.Manage().Window.Size = new System.Drawing.Size(1440, 1177);
    Driver.FindElement(By.Id(\\"username\\")).SendKeys(\\"tomsmith\\");
    Driver.FindElement(By.Id(\\"password\\")).SendKeys(\\"SuperSecretPassword!\\");
    Driver.FindElement(By.CssSelector(\\"#login button\\")).Click();
    Assert.That(Driver.FindElement(By.CssSelector(\\".flash.success\\")).Text, Is.EqualTo(\\"You logged into a secure area!\\\\\\\\\\\\\\\\n×\\"));
  }
}
"
`;

exports[`Code Export Java JUnit Selenium should export a test with a reused test method 1`] = `
"// Generated by Selenium IDE
using System;
using System.Collections;
using System.Collections.Generic;
using System.Linq;
using System.Threading;
using OpenQA.Selenium;
using OpenQA.Selenium.Chrome;
using OpenQA.Selenium.Firefox;
using OpenQA.Selenium.Support.UI;
using OpenQA.Selenium.Interactions;
using NUnit.Framework;
[TestFixture]
public class ValidcredentialsTest {
  private IWebDriver Driver;
  public IDictionary<string, object> vars {get; private set;}
  private IJavaScriptExecutor js;
  [SetUp]
  public void SetUp() {
    this.Driver = new ChromeDriver();
    this.js = (IJavaScriptExecutor)this.Driver;
    this.vars = new Dictionary<string, object>();
  }
  [TearDown]
  protected void TearDown() {
    Driver.Quit();
  }
  public void login() {
    Driver.Navigate().GoToUrl(\\"https://the-internet.herokuapp.com/\\");
    Driver.FindElement(By.LinkText(\\"Form Authentication\\")).Click();
    Driver.FindElement(By.Id(\\"username\\")).SendKeys(this.vars[\\"username\\"].ToString());
    Driver.FindElement(By.Id(\\"password\\")).SendKeys(this.vars[\\"password\\"].ToString());
    Driver.FindElement(By.CssSelector(\\".fa\\")).Click();
  }
  [Test]
  public void validcredentials() {
    this.vars[\\"username\\"] = \\"tomsmith\\";
    this.vars[\\"password\\"] = \\"SuperSecretPassword!\\";
    login();
  }
}
"
`;

exports[`Code Export Java JUnit Selenium should export a test with commands that open a new window 1`] = `
"// Generated by Selenium IDE
using System;
using System.Collections;
using System.Collections.Generic;
using System.Linq;
using System.Threading;
using OpenQA.Selenium;
using OpenQA.Selenium.Chrome;
using OpenQA.Selenium.Firefox;
using OpenQA.Selenium.Support.UI;
using OpenQA.Selenium.Interactions;
using NUnit.Framework;
[TestFixture]
public class SelectwindowTest {
  private IWebDriver Driver;
  public IDictionary<string, object> vars {get; private set;}
  private IJavaScriptExecutor js;
  [SetUp]
  public void SetUp() {
    this.Driver = new ChromeDriver();
    this.js = (IJavaScriptExecutor)this.Driver;
    this.vars = new Dictionary<string, object>();
  }
  [TearDown]
  protected void TearDown() {
    Driver.Quit();
  }
  public string waitForWindow(int timeout) {
    try {
      Thread.Sleep(timeout);
    } catch(Exception e) {
      Console.WriteLine(\\"{0} Exception caught.\\", e);
    }
    var whNow = ((IReadOnlyCollection<object>)Driver.WindowHandles).ToList();
    var whThen = ((IReadOnlyCollection<object>)this.vars[\\"WindowHandles\\"]).ToList();
    if (whNow.Count > whThen.Count) {
      return whNow.Except(whThen).First().ToString();
    } else {
      return whNow.First().ToString();
    }
  }
  [Test]
  public void selectwindow() {
    Driver.Navigate().GoToUrl(\\"http://the-internet.herokuapp.com/\\");
    Driver.Manage().Window.Size = new System.Drawing.Size(1260, 1027);
    Driver.FindElement(By.LinkText(\\"Multiple Windows\\")).Click();
    this.vars[\\"WindowHandles\\"] = Driver.WindowHandles;
    Driver.FindElement(By.LinkText(\\"Click Here\\")).Click();
    this.vars[\\"win9625\\"] = waitForWindow(2000);
    this.vars[\\"root\\"] = Driver.CurrentWindowHandle;
    Driver.SwitchTo().Window(this.vars[\\"win9625\\"].ToString());
    Assert.That(Driver.Title, Is.EqualTo(\\"New Window\\"));
    Driver.SwitchTo().Window(this.vars[\\"root\\"].ToString());
    Assert.That(Driver.Title, Is.EqualTo(\\"The Internet\\"));
  }
}
"
`;
